--- a/IoTModules/c#/subscriber/docker/Dockerfile.nanoserver-amd64
+++ b/IoTModules/c#/subscriber/docker/Dockerfile.nanoserver-amd64
@@ -1,10 +1,11 @@
+ARG base_tag=2.1-nanoserver-1809
 FROM microsoft/dotnet:2.1-sdk AS build-env
 WORKDIR /src
 COPY . ./
 RUN dotnet restore \src\IoTModules\c#\subscriber\Subscriber.csproj
 RUN dotnet publish \src\IoTModules\c#\subscriber\Subscriber.csproj -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.1-nanoserver-1809
+FROM mcr.microsoft.com/dotnet/core/aspnet:${base_tag}
 WORKDIR /app
 COPY --from=build-env /src/IoTModules/c#/subscriber/out/ .
 
