--- a/QuickStart/c#/publisher/docker/Dockerfile.bionic-arm32v7
+++ b/QuickStart/c#/publisher/docker/Dockerfile.bionic-arm32v7
@@ -1,10 +1,12 @@
+ARG base_tag=2.1-bionic-arm32v7
+
 FROM microsoft/dotnet:2.1-sdk AS build-env
 WORKDIR /src
 COPY . ./
 RUN dotnet restore /src/QuickStart/c#/publisher/*.csproj
 RUN dotnet publish /src/QuickStart/c#/publisher/*.csproj -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/runtime:2.1-bionic-arm32v7
+FROM mcr.microsoft.com/dotnet/core/runtime:${base_tag}
 
 WORKDIR /app
 COPY --from=build-env /src/QuickStart/c#/publisher/out/ .
