--- a/QuickStart/c#/subscriber/docker/Dockerfile.nanoserver-amd64
+++ b/QuickStart/c#/subscriber/docker/Dockerfile.nanoserver-amd64
@@ -1,10 +1,11 @@
+ARG base_tag=2.0-nanoserver-1809
 FROM microsoft/dotnet:2.1-sdk AS build-env
 WORKDIR /src
 COPY . ./
 RUN dotnet restore \src\QuickStart\c#\subscriber\Subscriber.csproj
 RUN dotnet publish \src\QuickStart\c#\subscriber\Subscriber.csproj -c Release -o out
 
-FROM mcr.microsoft.com/azure-functions/dotnet:2.0-nanoserver-1809
+FROM mcr.microsoft.com/azure-functions/dotnet:${base_tag}
 WORKDIR /app
 
 ENV AzureWebJobsScriptRoot=/app
