--- a/Common/auth/Auth.csproj
+++ b/Common/auth/Auth.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Microsoft.Azure.EventGridEdge.Samples.Common</RootNamespace>
-    <AssemblyName>Microsoft.EventGridEdge.Samples.Common</AssemblyName>
+    <RootNamespace>Microsoft.Azure.EventGridEdge.Samples.Common.Auth</RootNamespace>
+    <AssemblyName>Microsoft.EventGridEdge.Samples.Common.Auth</AssemblyName>
 
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <RuntimeFrameworkVersion>2.1.4</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
+    <RuntimeFrameworkVersion>3.0.0</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
