--- a/IoTModules/c#/subscriber/Subscriber.csproj
+++ b/IoTModules/c#/subscriber/Subscriber.csproj
@@ -5,9 +5,9 @@
     <RootNamespace>Microsoft.Azure.EventGridEdge.Samples.Subscriber</RootNamespace>
     <AssemblyName>aegs</AssemblyName>
 
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <RuntimeFrameworkVersion>2.1.4</RuntimeFrameworkVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
+    <RuntimeFrameworkVersion>3.0.0</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\auth\Auth.csproj" />
+    <ProjectReference Include="..\..\..\Common\auth\Auth.csproj" />
     <ProjectReference Include="..\..\..\SDK\SDK.csproj" />
   </ItemGroup>
   
