Modify custom subscriber to verify client certificate, update docker for all supported platforms

--- a/IoTModules/c#/subscriber/HostSettings.json
+++ b/IoTModules/c#/subscriber/HostSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "configuration": {
-    "enableEventGrid":  true,
+    "createEventGridSubscription": false,
     "eventGrid": {
       "url": "https://eventgridmodule:4438",
       "initialDelayInSeconds": 60,
