--- a/IoTModules/c#/subscriber/Subscriber.csproj
+++ b/IoTModules/c#/subscriber/Subscriber.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" AllowExplicitVersion="true" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" Version="3.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
   </ItemGroup>
 
