--- a/IoTModules/c#/subscriber/docker/Dockerfile.bionic-arm32v7
+++ b/IoTModules/c#/subscriber/docker/Dockerfile.bionic-arm32v7
@@ -1,14 +1,18 @@
-ARG base_tag=2.1-bionic-arm32v7
-FROM microsoft/dotnet:2.1-sdk AS build-env
+ARG base_tag=3.0-bionic-arm32v7
+
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /src
 COPY . ./
-RUN dotnet restore /src/IoTModules/c#/subscriber/*.csproj
-RUN dotnet publish /src/IoTModules/c#/subscriber/*.csproj -c Release -o out
+RUN mkdir -p /src/IoTModules/c#/subscriber/out
+RUN dotnet restore /src/IoTModules/c#/subscriber/Subscriber.csproj
+RUN dotnet publish /src/IoTModules/c#/subscriber/Subscriber.csproj -c Release -o /src/IoTModules/c#/subscriber/out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:${base_tag}
-
 WORKDIR /app
-COPY --from=build-env /src/IoTModules/c#/subscriber/out/ .
+
 EXPOSE 8080/tcp
 EXPOSE 4430/tcp
+
+COPY --from=build-env /src/IoTModules/c#/subscriber/out/ .
+
 CMD ["dotnet", "aegs.dll"]
