--- a/IoTModules/c#/subscriber/docker/Dockerfile.nanoserver-amd64
+++ b/IoTModules/c#/subscriber/docker/Dockerfile.nanoserver-amd64
@@ -1,15 +1,17 @@
-ARG base_tag=2.1-nanoserver-1809
-FROM microsoft/dotnet:2.1-sdk AS build-env
+ARG base_tag=3.0-nanoserver-1809
+
+FROM microsoft/dotnet:3.0-sdk AS build-env
 WORKDIR /src
 COPY . ./
 RUN dotnet restore \src\IoTModules\c#\subscriber\Subscriber.csproj
-RUN dotnet publish \src\IoTModules\c#\subscriber\Subscriber.csproj -c Release -o out
+RUN dotnet publish \src\IoTModules\c#\subscriber\Subscriber.csproj -c Release -o /src/IoTModules/c#/subscriber/out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:${base_tag}
 WORKDIR /app
-COPY --from=build-env /src/IoTModules/c#/subscriber/out/ .
 
 EXPOSE 8080/tcp
 EXPOSE 4430/tcp
+
+COPY --from=build-env /src/IoTModules/c#/subscriber/out/ .
 
 CMD ["dotnet", "aegs.dll"]
