--- a/IoTModules/c#/publisher/Publisher.csproj
+++ b/IoTModules/c#/publisher/Publisher.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\auth\Auth.csproj" />
     <ProjectReference Include="..\..\..\SDK\SDK.csproj" />
+    <ProjectReference Include="..\..\..\SecurityDaemonClient\SecurityDaemonClient.csproj" />
   </ItemGroup>
   
   <ItemGroup>
