--- a/IoTModules/c#/subscriber/Subscriber.csproj
+++ b/IoTModules/c#/subscriber/Subscriber.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\auth\Auth.csproj" />
     <ProjectReference Include="..\..\..\SDK\SDK.csproj" />
+    <ProjectReference Include="..\..\..\SecurityDaemonClient\SecurityDaemonClient.csproj" />
   </ItemGroup>
   
   <ItemGroup>
